Большое количество исправлений по тексту

--- a/inc/0-glossary.tex
+++ b/inc/0-glossary.tex
@@ -54,6 +54,8 @@
 
 \hypertarget{etsi}{ETSI --- European Telecommunications Standards Institute, Европейский институт телекоммуникационных стандартов}
 
+\hypertarget{ansi}{ANSI --- American national standards institute, Американский национальный институт стандартов}
+
 \hypertarget{idps}{IDPS --- Intrusion Detection and Prevention Systems, руководство по системам обнаружения и предотвращения вторжений}
 
 \hypertarget{ec2}{EC2 --- Elastic Compute Cloud, веб-сервис компании Amazon, предоставляющий вычислительные мощности в облаке}
@@ -76,7 +78,7 @@
 
 \hypertarget{bgp}{BGP --- Border Gateway Protocol, протокол граничного шлюза}
 
-\hypertarget{asn}{ASN --- автономная сетевая система}
+\hypertarget{as}{AS --- автономная сетевая система}
 
 \hypertarget{dns}{DNS --- Domain Name System, система доменных имен}
 
@@ -95,6 +97,8 @@
 \hypertarget{ftp}{FTP --- File Transfer Protocol, протокол передачи данных}
 
 \hypertarget{ssl}{SSL --- Secure Sockets Layer, уровень защищенных cокетов}
+
+\clearpage
 
 \hypertarget{http}{HTTP --- HyperText Transfer Protocol, протокол передачи гипертекста}
 
