--- a/inc/0-intro.tex
+++ b/inc/0-intro.tex
@@ -4,15 +4,15 @@
 Данный тип услуг выводит гибкость и эффективность на новый уровень, путем эволюции способов управления, таких как непрерывность, безопасность, резервирование и самообслуживание, которые соединяют физическую и виртуальную среду.
 
 Для эффективной работы облачной инфраструктуры требуется эффективная структура и организация.
-Небольшая команда из специалистов и бизнес-пользователей может создать обоснованный план и организовать свою работу в инфраструктуре.
+Небольшая команда из специалистов и бизнес-пользователей может создать обоснованный план и организовать свою работу в подобной инфраструктуре.
 Данная выделенная группа может намного эффективнее построить и управлять нестандартной облачной инфраструктурой, чем если компании будут просто продолжать добавлять дополнительные сервера и сервисы для поддержки центра обработки данных (\hyperlink{dc}{ЦОД}).
 
 Развитие информационного мира движется в сторону повсеместного распространения облачных вычислений, их технологий и сервисов.
 Очевидные преимущества данного подхода \cite{telecom-world}:
 \begin{itemize}
   \item снижение затрат --- отсутствие необходимости покупки собственного оборудования, программного обеспечения (\hyperlink{soft}{ПО}), работы системного инженера;
-  \item удаленный доступ --- возможность доступа к данным облака из любой точки мира, где есть доступ в глобальную сеть;
-  \item отказоустойчивость и масштабируемость --- изменение необходимых ресурсов в зависимости от потребности проекта, техническое обслуживание оборудования лежит на плечах облачного провайдера.
+  \item удаленный доступ --- возможность доступа к данным облака из любой точки мира, где есть доступ в глобальную сеть Интернет;
+  \item отказоустойчивость и масштабируемость --- изменение необходимых ресурсов в зависимости от потребностей проекта, техническое обслуживание оборудования лежит на плечах облачного провайдера.
 \end{itemize}
 
 В связи с этим можно сделать вывод, что основные недостатки облачных вычислений сводятся к информационной безопасности.
