--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -1,12 +1,12 @@
 \section{Безопасность облачных вычислений}
 
-Крупные поставщики облачных услуг в своих отчетах сообщали о печальных инцидентах в 2008 и 2009 годах \cite{amazon}.
+Крупные поставщики облачных услуг в своих отчетах сообщали о печальных инцидентах в 2008~г. и 2009~г. \cite{amazon}.
 Сервис компании Amazon под названием Simple Storage, а также Google Docs подверглись утечке информации пользователей.
-Сервис Gmail, в феврале 2009 года был недоступен более двух часов \cite{gmail}.
-Серьезные уязвимости были обнаружены в программном обеспечении VMware для Mac в мае 2009 года.
-Облачная платформа Azure от компании Microsoft была недоступна 22 часа в марте 2009 года \cite{azure}.
+Сервис Gmail, в феврале 2009~г. был недоступен более двух часов \cite{gmail}.
+Серьезные уязвимости были обнаружены в программном обеспечении VMware для Mac в мае 2009~г.
+Облачная платформа Azure от компании Microsoft была недоступна 22 часа в марте 2009~г. \cite{azure}.
 Подобные серьезные инциденты безопасности могли привести к полному краху облачных услуг поставщиков.
-Поставщик облачных СХД LinkUp допустил потерю 45\% данных пользователей и вынужден был закрыться в августе 2008 года \cite{linkup}.
+Поставщик облачных СХД LinkUp допустил потерю 45\% данных пользователей и вынужден был закрыться в августе 2008~г. \cite{linkup}.
 
 Меры по контролю безопасности в облаке аналогичны тем, которые существуют в традиционной ИТ-среде.
 Однако облачные вычисления могут столкнуться с различными рисками и вызовами, из-за многопользовательских характеристик, моделей предоставления услуг и моделей развертывания.
@@ -40,14 +40,14 @@
 \end{itemize}
 
 Данные, поступающие от поставщика публичного облака проходят через Интернет и это необходимо учитывать при обеспечении их конфиденциальности и целостности.
-Примером является Amazon Web Services, где в декабре 2008 года использовался протокол HTTP вместо HTTPS, таким образом увеличивая риск изменения данных без ведома пользователя \cite{aws}.
+Примером является Amazon Web Services, где в декабре 2008~г. использовался протокол HTTP вместо HTTPS, таким образом увеличивая риск изменения данных без ведома пользователя \cite{aws}.
 
 Отсутствие операций аудита сети облачного провайдера уменьшает доступ клиента к соответствующим журналам сети и данным.
 Этот фактор риска может привести к повторному использованию IP-адресов, которые находятся в кэше DNS и могут ввести в заблуждение пользователей.
 
 Еще одним из факторов риска является \hyperlink{bgp}{BGP}-перехват (префиксный перехват или перехват маршрута) является незаконным поглощением групп IP-адресов, повреждая интернет-таблицы маршрутизации.
-Из-за ошибки конфигурации, можно присвоить себе автономную систему (\hyperlink{asn}{ASN}) без разрешения владельца.
-Возможно и преднамеренное присвоение ASN, но это случается гораздо реже.
+Из-за ошибки конфигурации, можно присвоить себе автономную систему (\hyperlink{as}{AS}) без разрешения владельца.
+Возможно и преднамеренное присвоение AS, но это случается гораздо реже.
 
 Перехват префикса не является чем-то новым, однако из-за более широкого использования облачных вычислений, доступность облачных ресурсов увеличивается, а значит увеличивается количество мишеней для атак.
 Атаки на систему доменных имен (\hyperlink{dns}{DNS}) также не являются чем-то новым, однако и она представляет угрозу в сети из-за увеличения количества внешних DNS-запросов.
@@ -71,7 +71,7 @@ DDoS также активно используется в атаках на Iaa
 Так как злоумышленники могут использовать знания о конфигурации облака для вторжения в облачные сервисы, провайдеры облачных услуг публично не делятся информацией о используемых платформах, операционных системах и процессах.
 Таким образом, безопасность хоста не может быть детально известна пользователям и вся ответственность за обеспечение безопасности лежит на поставщике облачных услуг.
 Клиенты могут попросить провайдера обмениваться информацией в рамках соглашения о неразглашении (\hyperlink{nda}{NDA}), либо с помощью механизма оценки управления --- ISO/IEC 27002 или SysTrust, чтобы дать клиенту гарантию.
-Для обеспечения виртуализации, поставщик облачных услуг использует гипервизоры Xen и VMWare, которые являются bare-metal гипервизорами, то есть включены в состав существующей операционной системы.
+Для обеспечения виртуализации, поставщик облачных услуг использует гипервизоры Xen и VMware, которые являются bare-metal гипервизорами, то есть включены в состав существующей операционной системы.
 Таким образом уровень абстракции предоставляется пользователю, при этом скрывая операционную систему хоста от конечных пользователей.
 В случае SaaS, этот слой доступен только для разработчиков и персонала провайдера, а в случае PaaS, клиенты используют PaaS API, который взаимодействует с принимающим уровнем абстракции.
 Хотя поставщик облачных услуг несет ответственность за безопасность хоста для SaaS и PaaS услуг, клиент может управлять рисками хранения информации, размещенной в облаке.
@@ -80,7 +80,7 @@ DDoS также активно используется в атаках на Iaa
 
 Управление программным обеспечением для виртуализации относится к провайдеру, в то время как клиенты не имеют доступа к этому программному обеспечению, особенно если это публичное облако.
 Виртуализация аппаратного обеспечения или операционной системы позволяет совместно использовать ресурсы на нескольких гостевых виртуальных машинах одновременно и не мешая друг другу.
-Виртуализации уровня хоста может быть осуществлено с использованием гипервизоров первого уровня, таких как VMWare ESX, Xen, Oracle VM, Hyper-V.
+Виртуализации уровня хоста может быть осуществлено с использованием гипервизоров первого уровня, таких как VMware ESX, Xen, Oracle VM, Hyper-V.
 
 Клиенты имеют полный доступ к виртуальному экземпляру операционной системы, который виден из Интернета и изолирован от других экземпляров технологиями гипервизора.
 В таком случае безопасность и управление безопасностью лежит на пользователе.
@@ -169,7 +169,7 @@ DDoS также активно используется в атаках на Iaa
 
 Рекомендуется защищать данные с помощью передачи с использованием алгоритмов шифрования имеющих необходимые допуски, особенно при использовании публичного облака.
 Использование зашифрованных данных по незащищенному протоколу может обеспечить конфиденциальность, но не обеспечивает целостность данных.
-Следовательно, необходимо использовать протокол, который будет обеспечивать целостность и конфиденциальность данных, например, \hyperlink{ftp}{FTP} через \hyperlink{ssl}{SSL} (FTPS), безопасный протокол передачи гипертекста (\hyperlink{http}{HTTP/2}) или Secure Copy Program для SSH (\hyperlink{scp}{SCP}).
+Следовательно, необходимо использовать протокол, который будет обеспечивать целостность и конфиденциальность данных, например, \hyperlink{ftp}{FTP} через \hyperlink{ssl}{SSL} (FTPS), безопасный протокол передачи гипертекста (\hyperlink{http}{HTTP/2}) или Secure Copy Program (\hyperlink{scp}{SCP}).
 
 Шифровать данные в состоянии покоя не так просто, как данные в пути.
 Шифрование возможно при использовании облачного IaaS-сервиса для хранения данных, но использование шифрования в PaaS и SaaS не всегда осуществимо, поскольку он препятствует индексации и поиску этих данных.
@@ -193,7 +193,7 @@ DDoS также активно используется в атаках на Iaa
 
 \subsection{Обеспечение безопасности инфраструктуры Google}
 
-В январе 2017 года компания Google опубликовала документ под названием <<Google Infrastructure Security Design Overview>>, в котором она описывает ряд мер, которые предпринимаются компанией для обеспечения безопасности серверной инфраструктуры \cite{google}.
+В январе 2017~г. компания Google опубликовала документ под названием <<Google Infrastructure Security Design Overview>>, в котором она описывает ряд мер, которые предпринимаются компанией для обеспечения безопасности серверной инфраструктуры \cite{google}.
 
 Некоторые особенности:
 \begin{itemize}
@@ -380,7 +380,7 @@ chapter2 kostadinovska
 
 * Linux kernel, CentOS/RHEL/buntu/Debian Dirty COW
 
-* Виртуализация: KVM/Xen/LXC/OpenVZ/Virtuozzo/VMWare/Hyper-V
+* Виртуализация: KVM/Xen/LXC/OpenVZ/Virtuozzo/VMware/Hyper-V
 
 * Протоколы: NTP/SSL/TLS/HTTP2 DROWN/POODLE/HEARTBLEED TCP overflow libc GHOST
 
