--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -14,8 +14,8 @@
 
 Для применения практических навыков исследования уязвимостей необходима аппаратная платформа со следующими характеристиками:
 \begin{itemize}
-  \item процессор Intel Core\textregistered~i3 2.3 ГГц с поддержкой аппаратной виртуализации;
-  \item минимальный объем \hyperlink{ram}{ОЗУ} 8 Гб, рекомендуемый --- не менее 10 Гб;
+  \item процессор с поддержкой аппаратной виртуализации;
+  \item минимальный объем \hyperlink{ram}{ОЗУ} 8 Гб, рекомендуемый --- не менее 16 Гб;
   \item минимум 15 Гб места на жестком диске (\hyperlink{ssd}{SSD});
   \item операционная система Ubuntu 16.04, CentOS 7 или Debian 8 GNU/Linux.
 \end{itemize}
