Добавлен шаблон по системному анализу

--- a/inc/3-sysanalyz.tex
+++ b/inc/3-sysanalyz.tex
@@ -1,9 +1,213 @@
 \section{Системный анализ}
 
-Тут немного вводного текста.
+На данный момент при анализе и синтезе сложных программных и аппаратных систем все чаще используется системный подход.
+Важным моментом для системного подхода является определение структуры системы --- совокупности связей между элементами системы, отражающих их взаимодействие.
 
-Потом идет 9 подпунктов.
+Принципы системного анализа --- это положения общего характера, являющиеся обобщением опыта работы человека со сложными системами.
+Пренебрежение принципами при проектировании любой нетривиальной технической системы, непременно приводит к потерям того или иного характера, от увеличения затрат в процессе проектирования до снижения качества и эффективности конечного продукта.
 
-Все это добро примерно на 10 страниц.
+Системный анализ выполнен в соответствии с \cite{sys-analyz}.
+
+\subsection{Принцип конечной цели} \label{goal}
+
+Принцип конечной цели --- основополагающий принцип системного анализа.
+Конечная цель имеет абсолютный приоритет, в системе все должно быть подчинено достижению конечной цели.
+Принцип имеет несколько правил:
+\begin{itemize}
+  \item для проведения системного анализа необходимо в первую очередь, сформулировать цель функционирования системы, так как расплывчатые, не полностью определенные цели влекут за собой неверные выводы;
+  \item анализ системы следует вести на базе первоочередного уяснения основной цели исследуемой системы, что позволит определить ее существенные свойства, показатели качества и критерии оценки;
+  \item при синтезе систем любая попытка изменения или совершенствования должна быть в первую очередь рассмотрена с позиции его полезности в достижении конечной цели;
+  \item цель функционирования искусственной системы задается, как правило, системой, в которой исследуемая система является составной частью.
+\end{itemize}
+
+В соответствии с данным принципом должна быть четко сформулирована конечная цель --- назначение проектируемой системы и сформирован список функций, которые должна выполнять система.
+
+Цель проектирования --- разработка руководства  по решению проблем безопасности облачных сред.
+Список функций проектируемой системы:
+\begin{itemize}
+  \item Ф1 --- ??;
+  \item Ф2 --- ??;
+  \item Ф3 --- ??;
+  \item Ф4 --- ??;
+  \item Ф5 --- ??.
+\end{itemize}
+
+\subsection{Принцип единства}
+
+Принцип единства --- это совместное рассмотрение системы как целого и как совокупности частей.
+Принцип ориентирован на декомпозицию с сохранением целостных представлений о системе.
+Система должна рассматриваться и как целое, и как совокупность элементов.
+Расчленение системы необходимо производить, сохраняя целостное представление о системе.
+Принцип подразумевает выделение подсистем, композиция которых в совокупности со связями позволяет выполнять все функции проектируемой системы, определяет ее структуру и может быть рассмотрена как единая, целостная система.
+
+На основании функций проектируемой системы, представленных выше, в ней можно выделить следующие подсистемы:
+\begin{enumerate}
+  \item подсистема 1??;
+  \item подсистема 2??;
+  \item подсистема 3??;
+  \item подсистема 4??.
+\end{enumerate}
+
+%На рис. \ref{subsystems} представлена схема взаимодействия между подсистемами.
+%\addimg{subsys}{0.8}{Взаимодействие между подсистемами и их связь с окружающей средой}{subsystems}
+
+Обозначения, приведенные на рис. \ref{subsystems} требуют пояснения:
+\begin{itemize}[label={}]
+  \item a --- ??;
+  \item b --- ??;
+  \item c --- ??;
+  \item d --- ??;
+  \item e --- ??;
+  \item f --- ??;
+  \item g --- ??;
+  \item h --- ??.
+\end{itemize}
+
+\subsection{Принцип связности}
+
+Любая часть системы должна рассматриваться со всеми своими связями с окружающими ее объектами, как внешними по отношению ко всей системе, так и внутренними --- другими элементами системы.
+Если некоторая подсистема имеет связи только с внешней средой, то есть смысл реализовать ее в виде отдельной системы.
+Подсистема, не связанная ни с внешней средой, ни с другой подсистемой, является избыточной и должна быть удалена из системы.
+
+%Подсистема взаимодействия с пользователем представлена на рис. \ref{user-subsys}.
+%\addimg{user-subsys}{1}{Внутренние и внешние связи подсистемы взаимодействия с пользователем}{user-subsys}
+
+%Подсистема управления услугами представлена на рис. \ref{service-subsys}.
+%\addimg{service-subsys}{1}{Внутренние и внешние связи подсистемы управления услугами}{service-subsys}
+
+%Подсистема управления инфраструктурой представлена на рис. \ref{infrast-subsys}.
+%\addimg{infrast-subsys}{1}{Внутренние и внешние связи подсистемы управления инфраструктурой}{infrast-subsys}
+
+%Подсистема защиты и обеспечения целостности данных представлена на рис. \ref{security-subsys}.
+%\addimg{security-subsys}{1}{Внутренние и внешние связи подсистемы защиты и обеспечения целостности данных}{security-subsys}
+
+\subsection{Принцип модульности}
+
+В соответствии с этим принципом, выделение модулей системы, если таковые имеются, продуктивно и оправдано.
+Под модулями здесь понимаются относительно автономные и достаточно простые блоки, выполняющие ограниченный набор функций.
+Модуль в отличие от подсистем, которые имеют нерегулярную структуру и, как правило, несут определенную функцию, частично отражающую функцию системы, имеет регулярную структуру и характерные для него внутренние и внешние связи.
+Принцип указывает на возможность вместо части системы исследовать совокупность ее входных и выходных воздействий.
+Выделению модулей соответствует декопмозиция сложной задачи на множество более простых подзадач.
+
+Принцип модульности для разрабатываемой системы поясняется с помощью рис. \ref{modules}, описывающего разбиение на модули системы взаимодействия с пользователем.
+%\addimghere{modules}{0.65}{Принцип модульности на примере подсистемы взаимодействия с пользователем}{modules}
+
+Излишняя детализация не требуется, поэтому остальные системы на модули принято решение не разбивать.
+
+\subsection{Принцип функциональности}
+
+Принцип определяет первичность функции по отношению к структуре, так же, как цель первична для функции.
+Другими словами, цель определяет функции системы, а функции определяют ее структуру --- совокупность элементов с их связями.
+Структура же, в свою очередь, определяет параметры системы.
+В случае придания системе новых функций полезно пересматривать ее структуру, а не пытаться втиснуть новую функцию в старую схему.
+Поскольку выполняемые функции составляют процессы, то целесообразно рассматривать отдельно процессы, функции, структуры.
+
+Функции подсистем приведены в пункте \ref{goal}.
+
+Матрица инциденций функций системы и функций назначения подсистем приведена в таблице \ref{inc-matrix}.
+\begin{table}[H]
+  \caption{Матрица инциденций}\label{inc-matrix}
+  \begin{tabular}{|c|c|c|c|c|c|}
+  \hline \multirow{2}{*}{Функции} & \multicolumn{4}{|c|}{Подсистемы} & \multirow{2}{*}{Виртуальная инфраструктура} \\
+  \cline{2-5} & 1 & 2 & 3 & 4 & \\
+  \hline Ф1 & + & & & & + \\
+  \hline Ф2 & + & & & & + \\
+  \hline Ф3 & & + & & & + \\
+  \hline Ф4 & & + & & & + \\
+  \hline Ф5 & & & + & + & + \\
+  \hline
+  \end{tabular}
+\end{table}
+
+В матрице инциденций знаком <<+>> обозначены функции, которые реализуются для каждой из подсистем.
+
+Детализация функций подсистемы на примере подсистемы взаимодействия с пользователем:
+\begin{enumerate}
+  \item регистрация и авторизация пользователя в платежной системе;
+  \item обеспечение перечня услуг;
+  \item обеспечение возможных способов оплаты услуг;
+  \item возможность уточнения или изменения услуги.
+\end{enumerate}
+
+Входными данными для подсистемы является информация о пользователе, а выходными --- подтвержденный заказ услуг.
+
+\subsection{Принцип иерархии}
+
+Полезно введение иерархии частей и их ранжирование, что упрощает разработку системы и устанавливает порядок рассмотрения частей.
+Разработка иерархий классов является нетривиальной задачей.
+Грамотно спроектированные иерархии классов позволяют создавать высокоэффективные системы, плохо спроектированная иерархия приводит к созданию сложных и запутанных систем.
+
+Выполнение принципа иерархичности для разрабатываемой системы на примере подсистемы защиты и обеспечения целостности данных проиллюстрировано на рис. \ref{hierarchy-princ}.
+%\addimghere{hierarchy-princ}{1}{Принцип иерархии на примере подсистемы защиты и обеспечения целостности данных}{hierarchy-princ}
+
+\subsection{Принцип сочетания централизации и децентрализации}
+
+Степень централизации должна быть минимальной, обеспечивающей выполнение поставленной цели.
+Соотношение централизации и децентрализации определяется уровнями, на которых вырабатываются и принимаются управленческие решения.
+
+Недостатком децентрализованного управления является увеличение времени адаптации системы, которое существенно влияет на функционирование системы в быстро меняющихся средах.
+То, что в централизованных системах можно сделать за короткий промежуток времени, в децентрализованной системе будет осуществляться весьма медленно.
+Недостатком централизованного управления является сложность управления из-за огромного потока информации, подлежащей переработке в старшей системе управления.
+В медленно меняющейся обстановке децентрализованная часть системы успешно справляется с адаптацией поведения системы к среде и с достижением глобальной цели системы за счет оперативного управления, а при резких изменениях среды осуществляется централизованное управление по переводу системы в новое состояние.
+
+Например, можно выполнить декомпозицию подсистемы взаимодействия с пользователем таким образом:
+\begin{enumerate}
+  \item подсистема работы с пользователями;
+  \item подсистема работы пользователей с услугами;
+  \item подсистема учета финансовых средств.
+\end{enumerate}
+
+Такое разбиение позволит реализовать полученные подмножества в виде отдельных модулей.
+
+\subsection{Принцип развития}
+
+Учет изменяемости системы, ее способности к развитию, адаптации, расширению, замене частей, накапливанию информации.
+В основу синтезируемой системы требуется закладывать возможность развития, наращивания усовершенствования.
+Обычно расширение функций предусматривается за счет обеспечения возможности включения новых модулей, совместимых с уже имеющимися.
+С другой стороны, при анализе принцип развития ориентирует на необходимость учета предыстории развития системы и тенденций, имеющихся в настоящее время, для вскрытия закономерностей ее функционирования.
+
+Одним из способов учета этого принципа разработчиками является рассмотрение системы относительно ее жизненного цикла.
+Условными фазами жизненного цикла являются: проектирование, изготовление, ввод в эксплуатацию, эксплуатация, наращивание возможностей (модернизация), вывод из эксплуатации (замена), уничтожение.
+
+Отдельные авторы этот принцип называют принципом изменения (историчности) или открытости.
+Для того чтобы система функционировала, она должна изменяться, взаимодействовать со средой.
+
+Проектируемая система может быть развита следующим образом:
+\begin{itemize}
+  \item добавлением модуля конвертации валюты для оплаты услуги;
+  \item расширением перечня услуг;
+  \item внедрением дополнительных технологий виртуализации;
+  \item увеличением штата технической поддержки;
+  \item введением расширенного мониторинга;
+  \item многоуровневой защитой от атак на отказ;
+  \item расширением памяти на системах хранения данных;
+  \item многоуровневой репликацией и резервным копированием.
+\end{itemize}
+
+\subsection{Принцип учета случайностей}
+
+Можно иметь дело с системой, в которой структура, функционирование или внешние воздействия не полностью определены.
+
+Сложные системы не всегда подчиняются вероятностным законам.
+В таких системах можно оценивать <<наихудшие>> ситуации и проводить рассмотрение для них.
+Этот способ обычно называют методом гарантируемого результата, он применим, когда неопределенность не описывается аппаратом теории вероятностей.
+
+При наличии информации о вероятностных характеристиках случайностей можно определять вероятностные характеристики выходов в системе.
+
+События и действия, некорректные с точки зрения правил функционирования системы:
+\begin{itemize}
+  \item попытка заказа услуги без наличия финансовых средств на счету;
+  \item неподтвержденные заказы услуг;
+  \item сбой в работе аппаратуры, в частности устройств хранения данных;
+  \item сбой сети в в пределах дата-центра или на магистрали;
+  \item отсутствие своевременной работы технической поддержки;
+  \item ошибки и уязвимости в используемых программных платформах.
+\end{itemize}
+
+Кроме того, необходимо вести контроль успешности и целостности проведения операций с компонентами системы, данными пользователей и корректно обрабатывать исключения, возникновение которых возможно в процессе работы системы.
+
+Перечисленные выше принципы обладают высокой степенью общности.
+Такая интерпретация может привести к обоснованному выводу о незначимости какого-либо принципа.
+Однако, знание и учет принципов позволяет лучше увидеть существенные стороны решаемой проблемы, учесть весь комплекс взаимосвязей, обеспечить системную интеграцию.
 
 \clearpage
