--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -312,38 +312,7 @@ $s_n$ --- субъект, который соответствует програ
 \fi
 
 \iffalse
-chapter2 kostadinovska
-2.1.1
-2.1.2
-2.1.4
-2.2
-
-зегжда ОБЕСПЕЧЕНИЕ БЕЗОПАСНОСТИ
-ВИРТУАЛИЗИРОВАННЫХ СИСТЕМ
-~20стр.
-
-
------
-П.С.
-После обзора литературы следующий пункты системный анализ и вариативный анализ.
-Я их буду делать только как закончу основную часть диплома.
-
 ---
-
-Пока я только знаю что тут примерно 20 страниц должно быть. Тут само исследование работы.
-
-Все это должно быть с подпунктами.
-
-\addimg{gartner-providers}{1}{Тестовая картиночка}{gartner-providers}
-\addimg{gartner-virt}{1}{Тестовая картиночка}{gartner-virt}
-
----
-
-Актуальность: облака везде, облака нужны всем, не только бизнес-клиентам, но и обычным людям.
-
-Т.к. популярность облаков появилась сравнительно недавно и она стремительно развивается, не всегда успевают учесть все аспекты безопасности.
-
-Также из-за того, что облако состоит из большого количества ПО на различных уровнях, нужно учитывать все уязвимости, так как они могут всплыть на каждом из уровней.
 
 Мысли:
 
@@ -370,7 +339,6 @@ chapter2 kostadinovska
 * хорошая презентация Zegzhda-PD-supernova-2.pdf краткие тезисы, примеры картинок, модель безопасности даже есть
 
 ---
-
 
 почему именно linux и эти платформы?
 нужно собрать статистику использования дистрибутивов на серверах, а также платформ виртуализации
@@ -411,9 +379,9 @@ ntp - только на винде позволяет устроить ддос
 тяжело эксплуатировать
 
 - glibc CVE-2015-7547 http://opennet.ru/opennews/art.shtml?num=43886
-ее вряд ли можно эксплуатировать
+ее вряд ли можно эксплуатировать (ДА)
 
-- xen CVE-2016-3710 http://www.opennet.ru/opennews/art.shtml?num=44409
+- QEMU CVE-2016-3710 http://www.opennet.ru/opennews/art.shtml?num=44409
 работает только в hvm, выполнение кода на хост-ноде из гостевой
 
 - linux kernel CVE-2016-8655 http://www.opennet.ru/opennews/art.shtml?num=45632
