Добавлена основная часть системного анализа

--- a/inc/0-glossary.tex
+++ b/inc/0-glossary.tex
@@ -68,6 +68,8 @@
 
 \hypertarget{ebs}{EBS --- Elastic Block Store, сервис постоянного хранилища блочного уровня для использования с инстансами Amazon}
 
+\hypertarget{vpn}{VPN --- Virtual Private Network, виртуальная частная сеть}
+
 \hypertarget{iot}{IoT --- Internet of Things, интернет вещей}
 
 \hypertarget{ddos}{DDoS --- Distributed Denial of Service, распределенная атака на отказ}
@@ -96,9 +98,9 @@
 
 \hypertarget{ftp}{FTP --- File Transfer Protocol, протокол передачи данных}
 
-\hypertarget{ssl}{SSL --- Secure Sockets Layer, уровень защищенных cокетов}
-
 \clearpage
+
+\hypertarget{ssl}{SSL --- Secure Sockets Layer, уровень защищенных cокетов}
 
 \hypertarget{http}{HTTP --- HyperText Transfer Protocol, протокол передачи гипертекста}
 
