--- a/inc/3-sysanalyz.tex
+++ b/inc/3-sysanalyz.tex
@@ -22,14 +22,14 @@
 
 В соответствии с данным принципом должна быть четко сформулирована конечная цель --- назначение проектируемой системы и сформирован список функций, которые должна выполнять система.
 
-Цель проектирования --- разработка руководства  по решению проблем безопасности облачных сред.
+Цель проектирования --- разработка системы безопасности облачной среды.
 Список функций проектируемой системы:
 \begin{itemize}
-  \item Ф1 --- ??;
-  \item Ф2 --- ??;
-  \item Ф3 --- ??;
-  \item Ф4 --- ??;
-  \item Ф5 --- ??.
+  \item Ф1 --- авторизация и аутентификация пользователей;
+  \item Ф2 --- сетевая защита;
+  \item Ф3 --- идентификация и обработка инцидентов связанных с безопасностью;
+  \item Ф4 --- предоставление доступа к услугам;
+  \item Ф5 --- мониторинг.
 \end{itemize}
 
 \subsection{Принцип единства}
@@ -42,25 +42,25 @@
 
 На основании функций проектируемой системы, представленных выше, в ней можно выделить следующие подсистемы:
 \begin{enumerate}
-  \item подсистема 1??;
-  \item подсистема 2??;
-  \item подсистема 3??;
-  \item подсистема 4??.
+  \item подсистема аутентификации;
+  \item подсистема авторизации;
+  \item подсистема сетевой защиты;
+  \item подсистема проверки целостности данных.
 \end{enumerate}
 
-%На рис. \ref{subsystems} представлена схема взаимодействия между подсистемами.
-%\addimg{subsys}{0.8}{Взаимодействие между подсистемами и их связь с окружающей средой}{subsystems}
+На рис. \ref{subsys} представлена схема взаимодействия между подсистемами.
+\addimg{subsys}{0.8}{Взаимодействие между подсистемами и их связь с окружающей средой}{subsys}
 
-Обозначения, приведенные на рис. \ref{subsystems} требуют пояснения:
+Обозначения, приведенные на рис. \ref{subsys} требуют пояснения:
 \begin{itemize}[label={}]
-  \item a --- ??;
-  \item b --- ??;
-  \item c --- ??;
-  \item d --- ??;
-  \item e --- ??;
-  \item f --- ??;
-  \item g --- ??;
-  \item h --- ??.
+  \item a --- информация, предоставляемая пользователем передается на сервер;
+  \item b --- выходная информация (результат выполнения);
+  \item c --- проверка корректности переданных данных;
+  \item d --- в случае некорректных данных авторизации, возвращается управление к подсистеме аутентификации;
+  \item e --- предоставление доступов к инфраструктуре;
+  \item f --- возврат информации о правах доступа пользователя;
+  \item g --- обеспечение целостности данных инфраструктуры;
+  \item h --- обеспечение целостности данных пользователя.
 \end{itemize}
 
 \subsection{Принцип связности}
@@ -69,6 +69,7 @@
 Если некоторая подсистема имеет связи только с внешней средой, то есть смысл реализовать ее в виде отдельной системы.
 Подсистема, не связанная ни с внешней средой, ни с другой подсистемой, является избыточной и должна быть удалена из системы.
 
+ТУТ БУДЕТ РАЗБИЕНИЕ НА ПОДСИСТЕМЫ, СКОРЕЕ ВСЕГО В РАМУСЕ ДЕЛАТЬ IDEF0-ДИАГРАММЫ
 %Подсистема взаимодействия с пользователем представлена на рис. \ref{user-subsys}.
 %\addimg{user-subsys}{1}{Внутренние и внешние связи подсистемы взаимодействия с пользователем}{user-subsys}
 
@@ -89,8 +90,9 @@
 Принцип указывает на возможность вместо части системы исследовать совокупность ее входных и выходных воздействий.
 Выделению модулей соответствует декопмозиция сложной задачи на множество более простых подзадач.
 
-Принцип модульности для разрабатываемой системы поясняется с помощью рис. \ref{modules}, описывающего разбиение на модули системы взаимодействия с пользователем.
-%\addimghere{modules}{0.65}{Принцип модульности на примере подсистемы взаимодействия с пользователем}{modules}
+Принцип модульности для разрабатываемой системы поясняется с помощью рис. \ref{modules}, описывающего разбиение на модули системы аутентификации.
+
+\addimg{modules}{0.65}{Принцип модульности на примере подсистемы аутентификации}{modules}
 
 Излишняя детализация не требуется, поэтому остальные системы на модули принято решение не разбивать.
 
@@ -104,32 +106,32 @@
 
 Функции подсистем приведены в пункте \ref{goal}.
 
-Матрица инциденций функций системы и функций назначения подсистем приведена в таблице \ref{inc-matrix}.
+Матрица инциденций функций системы и функций назначения подсистем приведена в табл. \ref{inc-matrix}.
 \begin{table}[H]
   \caption{Матрица инциденций}\label{inc-matrix}
   \begin{tabular}{|c|c|c|c|c|c|}
-  \hline \multirow{2}{*}{Функции} & \multicolumn{4}{|c|}{Подсистемы} & \multirow{2}{*}{Виртуальная инфраструктура} \\
+  \hline \multirow{2}{*}{Функции} & \multicolumn{4}{|c|}{Подсистемы} & \multirow{2}{*}{Инфраструктура} \\
   \cline{2-5} & 1 & 2 & 3 & 4 & \\
-  \hline Ф1 & + & & & & + \\
-  \hline Ф2 & + & & & & + \\
+  \hline Ф1 & + & + & & & + \\
+  \hline Ф2 & & & + & & + \\
   \hline Ф3 & & + & & & + \\
-  \hline Ф4 & & + & & & + \\
-  \hline Ф5 & & & + & + & + \\
+  \hline Ф4 & + & + & + & + & + \\
+  \hline Ф5 & + & + & + & + & + \\
   \hline
   \end{tabular}
 \end{table}
 
 В матрице инциденций знаком <<+>> обозначены функции, которые реализуются для каждой из подсистем.
 
-Детализация функций подсистемы на примере подсистемы взаимодействия с пользователем:
+Детализация функций подсистемы на примере подсистемы аутентификации:
 \begin{enumerate}
-  \item регистрация и авторизация пользователя в платежной системе;
-  \item обеспечение перечня услуг;
-  \item обеспечение возможных способов оплаты услуг;
-  \item возможность уточнения или изменения услуги.
+  \item обеспечение возможности ввода данных (веб-интерфейс или API);
+  \item обеспечение шифрованного канала для передачи данных;
+  \item сверка полученных данных с внутренней базой;
+  \item возможность восстановления доступов с помощью двухфакторной аутентификации.
 \end{enumerate}
 
-Входными данными для подсистемы является информация о пользователе, а выходными --- подтвержденный заказ услуг.
+Входными данными для подсистемы является информация о пользователе, а выходными --- подтвержденный вход пользователя.
 
 \subsection{Принцип иерархии}
 
@@ -137,8 +139,8 @@
 Разработка иерархий классов является нетривиальной задачей.
 Грамотно спроектированные иерархии классов позволяют создавать высокоэффективные системы, плохо спроектированная иерархия приводит к созданию сложных и запутанных систем.
 
-Выполнение принципа иерархичности для разрабатываемой системы на примере подсистемы защиты и обеспечения целостности данных проиллюстрировано на рис. \ref{hierarchy-princ}.
-%\addimghere{hierarchy-princ}{1}{Принцип иерархии на примере подсистемы защиты и обеспечения целостности данных}{hierarchy-princ}
+Выполнение принципа иерархичности для разрабатываемой системы на примере подсистемы проверки целостности данных проиллюстрировано на рис. \ref{hierarchy}.
+\addimg{hierarchy}{1}{Принцип иерархии на примере подсистемы обеспечения целостности данных}{hierarchy}
 
 \subsection{Принцип сочетания централизации и децентрализации}
 
@@ -150,11 +152,11 @@
 Недостатком централизованного управления является сложность управления из-за огромного потока информации, подлежащей переработке в старшей системе управления.
 В медленно меняющейся обстановке децентрализованная часть системы успешно справляется с адаптацией поведения системы к среде и с достижением глобальной цели системы за счет оперативного управления, а при резких изменениях среды осуществляется централизованное управление по переводу системы в новое состояние.
 
-Например, можно выполнить декомпозицию подсистемы взаимодействия с пользователем таким образом:
+Например, можно выполнить декомпозицию подсистемы сетевой защиты таким образом:
 \begin{enumerate}
-  \item подсистема работы с пользователями;
-  \item подсистема работы пользователей с услугами;
-  \item подсистема учета финансовых средств.
+  \item подсистема работы виртуальной частной сети (\hyperlink{vpn}{VPN});
+  \item подсистема защиты от атак на отказ;
+  \item подсистема работы межсетевого экрана.
 \end{enumerate}
 
 Такое разбиение позволит реализовать полученные подмножества в виде отдельных модулей.
@@ -172,12 +174,11 @@
 Отдельные авторы этот принцип называют принципом изменения (историчности) или открытости.
 Для того чтобы система функционировала, она должна изменяться, взаимодействовать со средой.
 
-Проектируемая система может быть развита следующим образом:
+Проектируемая система может быть развита:
 \begin{itemize}
-  \item добавлением модуля конвертации валюты для оплаты услуги;
-  \item расширением перечня услуг;
+  \item переходом на более гибкие файловые системы;
   \item внедрением дополнительных технологий виртуализации;
-  \item увеличением штата технической поддержки;
+  \item увеличением штата системных инженеров;
   \item введением расширенного мониторинга;
   \item многоуровневой защитой от атак на отказ;
   \item расширением памяти на системах хранения данных;
@@ -196,11 +197,10 @@
 
 События и действия, некорректные с точки зрения правил функционирования системы:
 \begin{itemize}
-  \item попытка заказа услуги без наличия финансовых средств на счету;
-  \item неподтвержденные заказы услуг;
+  \item попытка входа без использования двухфакторной аутентификации;
   \item сбой в работе аппаратуры, в частности устройств хранения данных;
   \item сбой сети в в пределах дата-центра или на магистрали;
-  \item отсутствие своевременной работы технической поддержки;
+  \item отсутствие своевременной работы системных инженеров;
   \item ошибки и уязвимости в используемых программных платформах.
 \end{itemize}
 
